Added export tests. Add helper to query tables to get expected results (to validate filter results). Add custom views to sample type during test setup.